k8s/gke/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "false"
    # kubernetes.io/ingress.global-static-ip-name: "k8s-fw-default-ingress--963df5691c2b093c"
    # kubernetes.io/ingress.class: "nginx"
    # kubernetes.io/tls-acme: 'true'
    # certmanager.k8s.io/issuer: "letsencrypt-staging"
    # certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
  - host: ssl-testing.work
    http:
      paths:
      - path: /*
        backend:
          serviceName: webserver-service
          servicePort: 80
  tls:
    - hosts:
        - "ssl-testing.work"
      secretName: ssl-testing-tls
